checkin week1 and week2 solutions

--- a/labs/ex02/template/ex02.ipynb
+++ b/labs/ex02/template/ex02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# Load the data"
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +38,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((10000,), (10000, 2))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y.shape, tx.shape"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6591889938705313"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "height[:5]\n",
+    "#weight[:5]\n",
+    "#gender[:5]\n",
+    "x[:5]\n",
+    "mean_x\n",
+    "#std_x"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "### NB: throughout this laboratory the data has the following format: \n",
@@ -59,7 +93,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# 1. Computing the Cost Function\n",
@@ -87,12 +120,11 @@
     "    # INSERT YOUR CODE HERE\n",
     "    # TODO: compute loss by MSE\n",
     "    # ***************************************************\n",
-    "    raise NotImplementedError"
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# 2. Grid Search"
@@ -100,7 +132,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Fill in the function `grid_search()` below:"
@@ -139,7 +170,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Let us play with the grid search demo now!"
@@ -181,7 +211,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# 3. Gradient Descent"
@@ -189,7 +218,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Again, please fill in the functions `compute_gradient` below:"
@@ -221,7 +249,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Please fill in the functions `gradient_descent` below:"
@@ -277,7 +304,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Test your gradient descent function through gradient descent demo shown below:"
@@ -340,7 +366,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -468,7 +493,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# 5. Effect of Outliers and MAE Cost Function"
@@ -566,7 +590,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -699,7 +722,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# Stochastic Subgradient Descent\n",
@@ -820,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
